force-app/main/default/objects/Temporary_Accommodation_Service__c/Temporary_Accommodation_Service__c.object-meta.xml
<CustomObject>
    <label>Temporary Accommodation Service</label>
    <nameField>
        <displayFormat>TAS-{00000}</displayFormat>
        <label>Temporary Accommodation Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Temporary Accommodation Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>