force-app/main/default/objects/Temporary_Accommodation_Service__c/fields/Accommodation_Address__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_Address__c</fullName>
    <label>Accommodation Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>