force-app/main/default/objects/Temporary_Accommodation_Service__c/fields/Check_out__c.field-meta.xml
<CustomField>
    <fullName>Check_out__c</fullName>
    <label>Check out</label>
    <type>DateTime</type>
</CustomField>