force-app/main/default/objects/Temporary_Accommodation_Service__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Temporary Accommodation Services</relationshipLabel>
    <relationshipName>Temporary_Accommodation_Services</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>