force-app/main/default/objects/Temporary_Accommodation_Service__c/fields/Duration_of_Stay__c.field-meta.xml
<CustomField>
    <fullName>Duration_of_Stay__c</fullName>
    <label>Duration of Stay (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>