force-app/main/default/objects/Temporary_Accommodation_Service__c/fields/Temporary_Accommodation_Detail__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Accommodation_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Temporary Accommodation Detail</label>
    <referenceTo>Temporary_Accommodation_Detail__c</referenceTo>
    <relationshipLabel>Temporary Accommodation Services</relationshipLabel>
    <relationshipName>Temporary_Accommodation_Services</relationshipName>
    <type>Lookup</type>
</CustomField>